--- a/FacebookLogin/html/index.html
+++ b/FacebookLogin/html/index.html
@@ -21,6 +21,16 @@
                 <img src="../img/perfil.png" class="card-img-top p-0" alt="Perfil">
                 <p class="card-title text-center p-2 fw-normal userName">Jonathan</p>
             </div>
+            <div class="card col-2 p-0 rounded-3 mx-3" id="perfil">
+                <img src="../img/plus.png" alt="Icono de agregar" class="card-img-top p-5 bgCard"> 
+                <p class="card-title text-center p-2 fw-normal userName text-primary">Agregar cuenta</p>
+                <button type="button" class="close" aria-label="Close">
+                    <span aria-hidden="true">&times;</span>
+                </button>
+            </div>
+            
+
+            </div>
         </section>
         <form action="">
 
