--- a/CinemaFix/index.html
+++ b/CinemaFix/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>MovieS1</title>
+    <title>CinemaFix</title>
     <!-- CSS only -->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-rbsA2VBKQhggwzxH7pPCaAqO46MgnOM80zW1RWuH61DGLwZJEdK2Kadq2F9CUG65" crossorigin="anonymous">
     <link rel="stylesheet" href="assets/css/custom.css">
@@ -14,7 +14,7 @@
     <!--NAVBAR-->
     <nav class="navbar navbar-expand-lg shadow p-3 sticky-top" id="navBar">
             <div class="container-fluid ">
-                <a class="navbar-brand text-white" href="#">MovieS1</a>
+                <a class="navbar-brand text-white" href="#">CinemaFix</a>
                 <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
                     <span class="navbar-toggler-icon"></span>
                 </button>
@@ -24,15 +24,11 @@
                             <a class="nav-link active text-white" aria-current="page" href="#">Home</a>
                         </li>
                         <li class="nav-item ">
-                            <a class="nav-link text-white" href="#">Movies</a>
+                            <a class="nav-link text-white" href="assets/html/movies.html">Movies</a>
                         </li>
                         <li class="nav-item ">
                             <a class="nav-link text-white" href="#">Series</a>
                         </li>
-                        <li class="nav-item ">
-                            <a class="nav-link text-white" href="#">Recently added</a>
-                        </li>
-                        
                     </ul>
                     <!-- <form class="d-flex" role="search">
                         <input class="form-control me-2" type="search" placeholder="Search for a movie" aria-label="Search">
@@ -56,7 +52,31 @@
 
     <!--Top movies-->
     <main class="container py-5 ">
-        <h3 class="text-start text-uppercase text-white h3">Popular right now</h3>
+        <div class="row">
+            <div class="col-12" id="pagination-container">
+                <h3 class="text-lg-start text-center text-uppercase text-white h3 h-25">Popular movies right now</h3>
+            </div>
+
+            <div class="col-12 my-2">
+                <nav aria-label="Page navigation example">
+                    <ul class="pagination justify-content-center">
+                        <li class="page-item" id="item-previous">
+                            <button class="page-link bg-black border-0 text-success" aria-label="Previous" id="pagination-previous">
+                                <span aria-hidden="true">&laquo;</span>
+                            </button>
+                        </li>
+                        <li class="page-item"><p class="page-link bg-black border-0 text-success" id="first-pagination"></p></li>
+                        <li class="page-item">
+                            <button class="page-link bg-black border-0 text-success"  aria-label="Next" id="pagination-next">
+                                <span aria-hidden="true">&raquo;</span>
+                            </button>
+                        </li>
+                    </ul>
+                </nav>
+            </div>
+
+        </div>
+
         <div class="row py-2 text-white" id="movie-container">
 
             <!-- <div class="col-12 col-sm-6 col-lg-4 mb-4">
@@ -100,6 +120,6 @@
 
     <!-- JavaScript Bundle with Popper -->
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-kenU1KFdBIe4zVF0s0G1M5b4hcpxyD9F7jL+jjXkk+Q2h455rYXK/7HAuoJl+0I4" crossorigin="anonymous"></script>
-    <script src="assets/js/app.js"></script>
+    <script src="assets/js/index.js"></script>
 </body>
 </html>
