--- a/assets/html/movies.html
+++ b/assets/html/movies.html
@@ -8,13 +8,15 @@
     <!-- CSS only -->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-rbsA2VBKQhggwzxH7pPCaAqO46MgnOM80zW1RWuH61DGLwZJEdK2Kadq2F9CUG65" crossorigin="anonymous">
     <link rel="stylesheet" href="../css/custom.css">
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.10.3/font/bootstrap-icons.css">
+    <link rel="icon" href="/assets/img/icon.svg">
 </head>
 <body>
     <!--NAVBAR-->
     <nav class="navbar navbar-expand-lg shadow p-3 sticky-top" id="navBar">
         <div class="container-fluid ">
             <a class="navbar-brand text-white" href="#">CinemaFix</a>
-            <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
+            <button class="navbar-toggler bg-white" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
                 <span class="navbar-toggler-icon"></span>
             </button>
             <div class="collapse navbar-collapse " id="navbarSupportedContent">
@@ -23,10 +25,10 @@
                         <a class="nav-link active text-white" aria-current="page" href="../../index.html">Home</a>
                     </li>
                     <li class="nav-item ">
-                        <a class="nav-link text-white" href="assets/html/movies.html">Movies</a>
+                        <a class="nav-link text-white" href="#">Movies</a>
                     </li>
                     <li class="nav-item ">
-                        <a class="nav-link text-white" href="#">Series</a>
+                        <a class="nav-link text-white" href="series.html">Series</a>
                     </li>
                     
                 </ul>
